--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 		
 		
 		<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+   
+    <scope>provided</scope>
+</dependency>
+		
+		<dependency>
     <groupId>org.apache.tomcat.embed</groupId>
     <artifactId>tomcat-embed-jasper</artifactId>
     
